# ChangeLog for app-emacs/proofgeneral
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/proofgeneral/ChangeLog,v 1.33 2011/12/08 13:21:03 ulm Exp $

*proofgeneral-4.1 (08 Dec 2011)

  08 Dec 2011; Ulrich Mueller <ulm@gentoo.org> +proofgeneral-4.1.ebuild,
  +files/proofgeneral-4.1-emacs-24.patch:
  Version bump, bug 386465.

  07 Dec 2010; Ulrich Mueller <ulm@gentoo.org> proofgeneral-4.0.ebuild:
  Require Emacs version 23 at least. Don't compile and install bundled
  mmm-mode; depend on app-emacs/mmm-mode instead. Bug 347822.

*proofgeneral-4.0 (06 Dec 2010)

  06 Dec 2010; Christian Faulhammer <fauli@gentoo.org>
  +proofgeneral-4.0.ebuild:
  version bump, thanks to Christian D. <ThyrusG AT gmx DOT de> in bug 347822
  for most of the work

  11 Feb 2010; Ulrich Mueller <ulm@gentoo.org> proofgeneral-3.7.1.ebuild:
  Fix parallel make issue, install html documentation, bug 304399.

  17 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  -proofgeneral-3.7.ebuild:
  clean up

  11 Jun 2009; Markus Meier <maekke@gentoo.org> proofgeneral-3.7.1.ebuild:
  amd64 stable, bug #272471

  06 Jun 2009; nixnut <nixnut@gentoo.org> proofgeneral-3.7.1.ebuild:
  ppc stable #272471

  04 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  proofgeneral-3.7.1.ebuild:
  stable x86, bug 272471

*proofgeneral-3.7.1 (30 Jan 2009)

  30 Jan 2009; Ulrich Mueller <ulm@gentoo.org> proofgeneral-3.7.ebuild,
  +proofgeneral-3.7.1.ebuild:
  Version bump. Remove missing file from dodoc arguments, bug 256683.

  06 Dec 2008; Christian Faulhammer <fauli@gentoo.org>
  -files/proofgeneral-3.5_isabelle-non-interactive.patch,
  -proofgeneral-3.5-r1.ebuild:
  clean up

  17 Nov 2008; Diego E. Pettenò <flameeyes@gentoo.org>
  files/proofgeneral-3.5_isabelle-non-interactive.patch:
  Fix patch to apply.

  12 Apr 2008; nixnut <nixnut@gentoo.org> proofgeneral-3.7.ebuild:
  Stable on ppc wrt bug 215344
