@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX 50proofgeneral-gentoo.el 68 RMD160 f88b8933267aaeb02694c155223c910bfbde8103 SHA1 131add694a99178ba800fe25f5906102ab39e2cf SHA256 85504cdc0876b745d6989be00b87cc88ffc1dd6dfabff96a3cc3c3d48dfbe898
 AUX proofgeneral-4.1-emacs-24.patch 3180 RMD160 b46f2a73f9cc4ffd7f5641a14c9b92dd4d6a7919 SHA1 39574d11b30e9d3b4fe16ff9bcc5f8673abbe1e9 SHA256 0c12b506ade463617fe2cbfa003b2661ae6e0d1c276c8960c2dac18faa388fda
@@ -8,13 +8,17 @@ DIST ProofGeneral-4.0.tgz 1351482 RMD160 1c89da5fb4ac718f5ac9ff2a940c1e2222f1823
 DIST ProofGeneral-4.1.tgz 1428499 RMD160 d7f677926117b859b8b3087f46d349f5aec9d843 SHA1 0dd18bd0bdad8faab76f61bffc8e432c3ed7aeaf SHA256 2a264d46b48185cf1a6ebcca958e59171ea670fb0fc82ba46b8e1d6918ea7dc7
 EBUILD proofgeneral-3.7.1.ebuild 1344 RMD160 35cffe13a96d86d24a5586112b85822137a56229 SHA1 8c79e7ddcba6ed75e9b28ada8089ab8a0ae733d8 SHA256 0199b19bf18c0c20cfa5719dcfbec325511013d00f777c2b1c25ee72719806ba
 EBUILD proofgeneral-4.0.ebuild 1528 RMD160 d10607b1bfa8cdadaede24f9497f52b2ddf9b23e SHA1 178ce52828fd9934a533b0bdb2cb60ec8a458622 SHA256 8d9e9a1e1c800a7333eb75fd8ab4113817d28be3f19452aacf06d2af4699263f
-EBUILD proofgeneral-4.1.ebuild 1530 RMD160 ef77a7af2b717db12d9a995499455b43bc74c5e1 SHA1 a1c6fc4f927d9b1e3c805e6bdf99f3286d87f80e SHA256 b2cd341ad3916bcb428a53fb610716eaa439bb19e8e0ef0717bce5913f4199de
-MISC ChangeLog 4910 RMD160 603755e3b922da55cf1f1c97072e93c64beccf4a SHA1 a22877599324c89353a3deff98b43df93df78850 SHA256 dedc567f709cbddc28779873f2db9a4da8e810fc339cb3c84be1900e8ea86dbe
+EBUILD proofgeneral-4.1.ebuild 1529 RMD160 9c7ece48494ad58597235addb61e4a71ddb04247 SHA1 24bdecb18ae3f095f5999272aaec10b5f3a74985 SHA256 787f5858f8cd20cd029ea7cd32e93c32e187280578ae4f787e3c8d8d8eeeed0f
+MISC ChangeLog 5021 RMD160 96fcb62a9c71106a69326e8ad70811f4d945e36d SHA1 655fe4b75daa951fad038b4d756ac4450cbddaa8 SHA256 1ab7dbd7302ac17bb1e3dd1cef0caa0de34ccf25fa438abb7fe126881a97830f
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk7gvAgACgkQOeoy/oIi7uxRNACgll1gmduOFjKRC4MwlSQYnFph
-10QAn0z7JX3AzBrGH1jbi8U3tCYZRj8I
-=6loK
+iQEcBAEBCgAGBQJPSlRVAAoJEOTDgjZ80txdhykH/0i3RzDDrDt/xzEwAz88dK8K
+dcnXBFQMYsc/CwFc2ENgDh3rqKNc1jKKDttXK2S42x3Cog9bdxeidj54FrbbbUqw
+rIsStM3lylDoCchUi8ptzHQUw78CL+2HxnYS0j+7GOAFPf6506bnoPYL6SOlJwSF
+BDHEZXqojLh2GGwJB5oBgH2Mz13BwXf2a6cBZL8gKxoaAr138s+iCB+lfF9SoYas
+mxrV4c4DCJCxSVIJ7RhLzZVLfTlw4B7HLaRCbzo9P9DnJXBcGFxG7z5Too55Msr2
+jOaM7U0End8H7GXjUTif0v4dUFOTLs1JKH6eH/3UiFhoF74ZUatmvIBH+Q7gm+s=
+=IXom
 -----END PGP SIGNATURE-----
