@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/proofgeneral
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/proofgeneral/ChangeLog,v 1.33 2011/12/08 13:21:03 ulm Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/proofgeneral/ChangeLog,v 1.34 2012/02/26 15:48:32 ago Exp $
+
+  26 Feb 2012; Agostino Sarubbo <ago@gentoo.org> proofgeneral-4.1.ebuild:
+  Stable for amd64, wrt bug #404605
 
 *proofgeneral-4.1 (08 Dec 2011)
 
